--- a/src/App.css
+++ b/src/App.css
@@ -58,6 +58,8 @@ footer {
   gap: 30px;
 }
 
+
+
 button {
   padding: 10px 20px; 
   border: none; 
@@ -66,7 +68,20 @@ button {
   font-size: 16px; 
   transition: background-color 0.3s; 
 }
+.navigationBar li {
+  display: inline;
+  float: left;
+}
 
+.navigationBar a {
+  display: block;
+  padding: 15px;
+  background-color: #dddddd;
+}
+
+.navigationBar{
+  margin-left: 60%;
+}
 button.primary {
   background-color: #007bff; 
   color: white; 
@@ -295,12 +310,15 @@ h2, h3, h4 {
 .inputs{
   width: 50px;
 }
-.circle-img{
-  border-radius: 50%;
-  border:2px solid blue;
-  width: 80px;
-  height: 80px;
-  
+.circular_image {
+  float: left;
+  margin-left: 5px;
+  margin-top: 0px;
+  width: 00px;
+  height: 100px;
+  border-radius: 100%;
+  overflow: hidden;
+  background-color: blue;
 }
 
 
