--- a/src/App.css
+++ b/src/App.css
@@ -314,11 +314,15 @@ h2, h3, h4 {
   float: left;
   margin-left: 5px;
   margin-top: 0px;
-  width: 00px;
+  width: 100px;
   height: 100px;
   border-radius: 100%;
   overflow: hidden;
   background-color: blue;
 }
 
+.text{
+  font-style: italic;
+  color: #333;
+}
 
